--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -6,4 +6,8 @@ RUN pip install -r /tmp/requirements.txt
 
 COPY ./kafka-consumer.py /kafka-consumer.py
 
-CMD ["python", "kafka-consumer.py"]
+# ENV POSTGRES_USER jobsite
+# ENV POSTGRES_PASSWORD jobsite
+# ENV POSTGRES_DB postgres
+
+CMD ["python", "/kafka-consumer.py"]
