--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,10 +83,11 @@ services:
 
   consumer:
     build: ./consumer/
-    env_file:
-      - .env
+    depends_on:
+      - postgres
+      - kafka
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:?err}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?err}
+      POSTGRES_DB: ${POSTGRES_DB:?err}
   
